--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 hey you bastards, i'm still here
-<img src="/images/hybish.png" width=50% height=50%>
+<img src="/images/hybish.png" width=200 height=200>
