--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-hey you bastards, i'm still here
-<img src="/images/hybish.png" height=720>
+<a href="https://www.youtube.com/watch/7UecFm_bSTU"><img src="/images/hybish.png" alt:"Paper that says 'Hey you bastards, I'm still here.'" title:"Screenshot from NMIXX 'DASH' M/V" height=720></a>
