--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://www.youtube.com/watch/7UecFm_bSTU"><img src="/images/hybish.png" alt:"Paper that says 'Hey you bastards, I'm still here.'" title:"Screenshot from NMIXX 'DASH' M/V" height=720></a>
+<a href="https://www.youtube.com/watch/7UecFm_bSTU"><img src="/images/hybish.png" alt="Paper that says 'Hey you bastards, I'm still here.'" title="Screenshot from NMIXX 'DASH' M/V." height=720></a>
