--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://www.youtube.com/watch/7UecFm_bSTU"><img src="/images/hybish.png" height=720></a>
+<a href="https://www.youtube.com/watch/7UecFm_bSTU"><img src="/images/hybish.png" title="Screenshot from NMIXX 'DASH' M/V." width=645></a>
