--- a/letteraboutmycause/index.html
+++ b/letteraboutmycause/index.html
@@ -1,3 +1,4 @@
-why hello miss b. welcome to my website. i have decided to give this letter a separate space here that will be deleted after it gets graded!!! if you do think my cause is good then by all means please send it out
+why hello miss b. welcome to my website. i have decided to give this letter a separate space here that will be deleted after it gets graded!!! if you do think my cause is good to send then by all means please send it out.
+the whole website is a wip (everything is an html file, to put it in short just a blank webpage with text) but when i am NOT busy with school it will be <a href="https://www.youtube.com/watch?v=AKZKw7GCsik">polished</a>.
 
-let's <a href="https://lostinkwangya.com/letteraboutmycause/theactualletter">get into it,</a> shall we?
+let's <a href="https://lostinkwangya.com/letteraboutmycause/theactualletter.html">get into it</a>, shall we?
