--- a/letteraboutmycause/theactualletter.html
+++ b/letteraboutmycause/theactualletter.html
@@ -1,6 +1,6 @@
-<p>Grassroots Letter to Official<p>
+<pre><p>Grassroots Letter to Official<p>
 
-<p>Dear Mr. Mallard<p>
+<p>Dear Mr. Mallard<p>  
 
 <p>417 House Office Building<p>
 <p>402 South Monroe St<p>
@@ -36,4 +36,4 @@
 
 <p>Sincerely,<p>
 
-<p>Dylan W<p>
+<p>Dylan W<p><pre>
