--- a/letteraboutmycause/theactualletter.html
+++ b/letteraboutmycause/theactualletter.html
@@ -21,11 +21,11 @@
 
 <p>So please, think of something to fix this. I have already made a few solutions.<p>
 
-<p><b>1. Put a child lock on these albums<b> since these fans don't know any better and acting like children.<p>
+<p><b>1. Put a child lock on these albums<b><p>since these fans don't know any better and acting like children.<p>
 
-<p><b>2. Ask stores to put albums in the back.<b> having albums on display is one of the many reasons why photocards are being stolen.<p>
+<p><b>2. Ask stores to put albums in the back.<b><p>having albums on display is one of the many reasons why photocards are being stolen.<p>
 
-<p><b>3. Seal the albums with a harder to rip through plastic.<b> The albums come lightly sealed, especially compact versions. By putting a material harder to rip through it serves maximum protection.<p>
+<p><b>3. Seal the albums with a harder to rip through plastic.<b><p>The albums come lightly sealed, especially compact versions. By putting a material harder to rip through it serves maximum protection.<p>
 
 <p>Thank you!<p>
  
