--- a/letteraboutmycause/theactualletter.html
+++ b/letteraboutmycause/theactualletter.html
@@ -1,39 +1,37 @@
-<pre><p>Grassroots Letter to Official<p>
+<pre>Grassroots Letter to Official
 
-<p>Dear Mr. Mallard<p>  
+Dear Mr. Mallard  
 
-<p>417 House Office Building<p>
-<p>402 South Monroe St<p>
+417 House Office Building
+402 South Monroe St
 
-<p>Tallahassee, FL 32399-1300<p>
+Tallahassee, FL 32399-1300
 
  
 
-<p>I hope this letter finds you well. I am writing because there is a cause I care about that I feel needs to be addressed in our communities.<p>
-<p>This cause is people stealing photocards out of kpop albums.<p>
+I hope this letter finds you well. I am writing because there is a cause I care about that I feel needs to be addressed in our communities.
+This cause is people stealing photocards out of kpop albums.
 
-<p>Because this cause means so much to me, I’ve decided to write to address some concerns I have, and some recommendations of changes I believe can be made to enhance the cause I care about.<p>
+Because this cause means so much to me, I’ve decided to write to address some concerns I have, and some recommendations of changes I believe can be made to enhance the cause I care about.
 
 
-<p>First off, let's start off with the why. Why are people stealing photocards? The reason people do this is for a piece of paper. A piece of paper of a kpop idol. A piece of paper of a kpop idol doing nothing. These pieces of paper are very valuable to some people. So why steal them?<p>
+First off, let's start off with the why. Why are people stealing photocards? The reason people do this is for a piece of paper. A piece of paper of a kpop idol. A piece of paper of a kpop idol doing nothing. These pieces of paper are very valuable to some people. So why steal them?
 
-<p>This is where everything falls apart. Most kpop stans are broke. The age range is wide, but even in this wide range, people are somehow still broke. I blame inflation for this. Although I know you probably don't have direct contact to someone who could do something about inflation, can you please get to the bottom of this? I just wanna buy a <a href=https://twice.jype.com/>TWICE</a> album without worrying about anything being stolen.<p>
+This is where everything falls apart. Most kpop stans are broke. The age range is wide, but even in this wide range, people are somehow still broke. I blame inflation for this. Although I know you probably don't have direct contact to someone who could do something about inflation, can you please get to the bottom of this? I just wanna buy a <a href=https://twice.jype.com/>TWICE</a> album without worrying about anything being stolen.
 
-<p>So please, think of something to fix this. I have already made a few solutions.<p>
+So please, think of something to fix this. I have already made a few solutions.
 
-<b>1. Put a child lock on these albums<b><p>since these fans don't know any better and acting like children.<p>
+<b>1. Put a child lock on these albums</b> since these fans don't know any better and acting like children.
+<b>2. Ask stores to put albums in the back.</b> Having albums on display is one of the many reasons why photocards are being stolen.
+<b>3. Seal the albums with a harder to rip through plastic.</b> The albums come lightly sealed, especially compact versions. By putting a material harder to rip through it serves maximum protection.
 
-<b>2. Ask stores to put albums in the back.<b><p>having albums on display is one of the many reasons why photocards are being stolen.<p>
-
-<b>3. Seal the albums with a harder to rip through plastic.<b><p>The albums come lightly sealed, especially compact versions. By putting a material harder to rip through it serves maximum protection.<p>
-
-<p>Thank you!<p>
- 
-
+Thank you!
  
 
  
 
-<p>Sincerely,<p>
+ 
 
-<p>Dylan W<p><pre>
+Sincerely,
+
+Dylan W<pre>
