--- a/scienceproject/index.html
+++ b/scienceproject/index.html
@@ -1,1 +1,4 @@
-i made a website 😁
+the world when you go outside
+<img src="/images/bewbette.jpg">
+the world when you dont go outside
+<img src="/images/nooo.jpg">
